--- a/AzureFunctionsDotNet7Example/AzureFunctionsDotNet7Example.csproj
+++ b/AzureFunctionsDotNet7Example/AzureFunctionsDotNet7Example.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.1.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="1.2.1" />
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.1" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" Version="1.3.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
